--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -62,7 +62,7 @@ img {
 ------------------------------ */
 .site-wrapper {
   position: relative;
-  min-width: 1180px;
+  /*min-width: 1180px;*/
 }
 
 
