--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -356,7 +356,12 @@ img {
     }
   }
 }
-
+.el-table__expand-icon {
+  display: inline-block;
+  width: 14px;
+  vertical-align: middle;
+  margin-right: 5px;
+}
 
 /* Dropdown
 ------------------------------ */
